# covid-bc

./: README.md  pyproject.toml  requirements.txt
data/: bc_health_region_master_2018.xlsx
