[tool.poetry]
name = "covid-bc"
version = "0.1.0"
description = ""
authors = ["bubblbu <asura.enkhbayar@gmail.com>"]

[tool.poetry.dependencies]
python = "3.6.1"
pandas = "^1.1.4"
seaborn = "^0.11.0"
matplotlib = "^3.3.3"
geopandas = "^0.8.1"
plotly = "^4.12.0"
tqdm = "^4.52.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
